Product Page and Fix in FooterMain due to overflow

--- a/client/src/components/Product/ProductCard.css
+++ b/client/src/components/Product/ProductCard.css
@@ -1,7 +1,7 @@
 .product-card {
   display: flex;
   justify-content: space-between;
-  margin: 1% 0;
+  margin: 2% 0;
   padding: 0 8% 0 0;
   box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.1);
   border-radius: 7px;
@@ -43,9 +43,8 @@
 
 .product-card__content--buttons {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 20%;
+    min-width: 20%;
 }
 
 .product-card__content--order {
@@ -56,7 +55,8 @@
     line-height: 27px;
     text-align: center;
     border-radius: 4px;
-    padding: 2% 10%;
+    padding: 1% 5%;
+    margin-right: 2%;
     background-color: var(--button-color-secondary);
     color: var(--text-color-secondary);
     cursor: pointer;
@@ -76,7 +76,7 @@
 
 .product-card__content--cart {
     border-radius: 4px;
-    padding: 2%;
+    padding: 1%;
     background-color: #939393;
     cursor: pointer;
 }
